created demo class, tested, work fine